# HTG-thesis

./: .gitignore  Makefile  README.md  prepare_images.py  pyproject.toml  train_crnn.py  train_diffusion.py  train_model.py
configs/: train_crnn.yaml  train_diffusion.yaml  train_model.yaml
configs/dataset/: iam_lines.yaml  iam_words.yaml  text2image.yaml
configs/experiment/: scratch.yaml
configs/model/: crnn.yaml  diffusion.yaml
configs/models/: diffusion.yaml
data/: .gitignore
handwritten_generation/datasets/: dataset.py  tokenizer.py
handwritten_generation/models/: crnn.py  ctc_utils.py  diffusion.py  modules.py  optimizers.py  unet.py
handwritten_generation/tools/: train_model.py  utils.py
